[package]
name = "darwin-webkit"
description = "Bindings to some of the WebKit's API on MacOS for Rust"
version = "0.1.0"
authors = ["Pedro Tacla Yamada <tacla.yamada@gmail.com>"]
license = "MIT"
keywords = [ "macos", "webkit", "cocoa" ]
readme = "README.md"
repository = "https://github.com/yamadapc/rust-darwin-webkit"

[dependencies]
cocoa = "0.18.4"
core-graphics = "0.17.3"
libc = "0.2.45"
objc = "0.2.5"
dispatch = "0.2.0"
block = "0.1.6"
