[package]
name = "darwin-webkit"
description = "Bindings to some of the WebKit's API on MacOS for Rust"
version = "0.2.0"
authors = ["Pedro Tacla Yamada <tacla.yamada@gmail.com>"]
license = "MIT"
keywords = [ "macos", "webkit", "cocoa" ]
readme = "README.md"
repository = "https://github.com/yamadapc/rust-darwin-webkit"
edition = "2021"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
core-graphics = "0.23.1"
libc = "0.2.45"
objc = "0.2.5"
dispatch = "0.2.0"
block = "0.1.6"

[dev-dependencies]
criterion = "0.5.1"

#[[bench]]
#name = "count_benchmark"
#harness = false
